Configure Git LFS for large model files

--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,7 @@ ENV/
 
 # Cache files
 .cache/
+
+# Git LFS
+*.pkl filter=lfs diff=lfs merge=lfs -text
+*.ipynb filter=lfs diff=lfs merge=lfs -text
