--- a/my-react-app/package.json
+++ b/my-react-app/package.json
@@ -5,7 +5,9 @@
   "dependencies": {
     "@auth0/auth0-react": "^2.0.0",
     "axios": "^1.4.0",
+    "chart.js": "^4.4.9",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^6.14.1",
